# worldgraph

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  INTEGRATION.md  LICENSE-MIT  README.md  SYSTEM.md  capability-table.json  cli-config.yaml  install.md  package-lock.json  package.json  rvm.manifest.toml  trust.json
.claude/: settings.json
.claude-plugin/: plugin.json
.codex/: config.toml
.github/actions/worldgraph/: action.yml
.github/workflows/: ci.yml  worldgraph.yml
.harness/: manifest.json  manifest.sha256
.openclaw/: openclaw.json
.opencode/: opencode.json
__tests__/: smoke.test.ts
docs/adr/: ADR-200-wasm-bridge.md  ADR-201-coordinate-frame.md  ADR-202-spatial-applications.md  ADR-203-evolution-loop.md
optional-mcps/: worldgraph.json
src/: init.ts
src/agents/: architect.ts  implementer.ts  reviewer.ts  test-writer.ts
supersplat-bridge/: .gitignore  README.md  package.json  tsconfig.json  vitest.config.ts
supersplat-bridge/__tests__/: enu.test.ts  fake-bridge.ts  renderer.test.ts  usecases.test.ts
supersplat-bridge/src/: enu.ts  index.ts  playcanvas-adapter.ts  renderer.ts  types.ts  wasm-bridge.ts
supersplat-bridge/src/usecases/: audit.ts  avatars.ts  configurator.ts  occworld.ts
wifi-densepose-worldgraph/: Cargo.toml
wifi-densepose-worldmodel/: Cargo.toml
wifi-densepose-worldmodel/src/: bridge.rs
worldgraph-wasm/: Cargo.toml  build-wasm.sh
worldgraph-wasm/src/: bridge.rs  core.rs  enu.rs  lib.rs  overlay.rs
