[workspace]
resolver = "2"
members = [
    "wifi-densepose-geo",
    "wifi-densepose-worldgraph",
    "wifi-densepose-worldmodel",
    "worldgraph-wasm",
]

# Shared package metadata inherited by each member via `<field>.workspace = true`.
[workspace.package]
version = "0.3.1"
edition = "2021"
authors = ["rUv <ruv@ruv.net>", "WiFi-DensePose Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/worldgraph"

# Shared dependency versions inherited by members via `<dep> = { workspace = true }`.
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
petgraph = "0.6"
